--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Wasla</string>
+    <string name="dollars_name">Add Fakka</string>
+    <string name="send_name">Send Mail</string>
+    <string name="donates_name">Donation</string>
 </resources>
