setup circule button and add new clickable effect with using [layout_constraintCircleRadius] - COMMIT 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="dollars_name">Add Fakka</string>
     <string name="send_name">Send Mail</string>
     <string name="donates_name">Donation</string>
+    <string name="button">Button</string>
 </resources>
